--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,3 +16,19 @@
 iframe {
   height: 450px;
 }
+
+.logo {
+  text-align: center;
+  height: 130px;
+  margin-bottom: 20px;
+}
+
+.logo img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.photo-tiles {
+  margin-bottom: 100px;
+  overflow: hidden;
+}
