--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,48 @@
   font-family: "Gotham Narrow A", "Gotham Narrow B";
   font-style: normal;
   font-weight: 700;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  color: #ffffff;
+}
+
+section {
+  margin-top: 50px;
+}
+
+p {
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+iframe {
+  max-width: 100%;
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: -1;
+  background-color: #76744e;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.contest-logo {
+  width: 130px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.video-container {
+  text-align: center;
 }
 
 .photo-tile {
@@ -9,12 +51,18 @@
   display: inline-block;
 }
 
+.hidden {
+  display: none;
+}
+
 .page-title {
   text-align: center;
 }
 
-iframe {
-  height: 450px;
+.logos {
+  background-color: #76744e;
+  width: 100%;
+  padding-top: 50px;
 }
 
 .logo {
@@ -32,3 +80,76 @@ iframe {
   margin-bottom: 100px;
   overflow: hidden;
 }
+
+input[type='submit'] {
+  background-color: #c8362f;
+  color: #ffffff;
+  border: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 16px 50px;
+}
+
+.logo-container {
+  padding-top: 50px;
+}
+
+.form-container {
+  padding-bottom: 50px;
+}
+
+label {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.submit-container {
+  text-align: center;
+}
+
+.intro-text {
+  font-size: 24px;
+}
+
+h4 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.body-text-container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 660px;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.body-text {
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+@media (max-width: 709px) {
+  .body-text {
+    font-size: 19px;
+  }
+}
+
+@media (max-width: 669px) {
+    .body-text {
+      font-size: 18px;
+    }
+  }
+
+  @media (max-width: 629px) {
+    .body-text {
+      font-size: 17px;
+    }
+  }
+
+  @media (max-width: 599px) {
+    .body-text {
+      font-size: 16px;
+    }
+  }
