--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Gotham Narrow A", "Gotham Narrow B";
+  font-family: "Gotham Narrow A", "Gotham Narrow B", Helvetica, sans-serif;
   font-style: normal;
   font-weight: 700;
   -webkit-font-smoothing: antialiased;
@@ -7,11 +7,37 @@
 }
 
 body {
-  color: #ffffff;
+  color: #323232;
+  font-size: 16px;
+}
+
+h1{
+  font-size: 3.157em;
+}
+
+h2 {
+  font-size: 2.369em;
+}
+
+h3 {
+  font-size: 1.777em;
+}
+
+h4 {
+  font-size: 1.333em;
+}
+
+h5 {
+  font-size: 1em;
+}
+
+h6,
+small {
+  font-size: 0.75em;
 }
 
 section {
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 p {
@@ -21,6 +47,28 @@ p {
 
 iframe {
   max-width: 100%;
+}
+
+hr {
+  border-top: 10px solid #f2d667;
+}
+
+a {
+  color: #c8362f;
+}
+
+a:hover,
+a:focus {
+  color: #358873;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  color: #358873;
+}
+
+h4 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .background {
@@ -34,6 +82,10 @@ iframe {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.contest-body {
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .contest-logo {
@@ -57,6 +109,10 @@ iframe {
 
 .page-title {
   text-align: center;
+}
+
+.intro p {
+  font-weight: 700;
 }
 
 .logos {
@@ -88,6 +144,7 @@ input[type='submit'] {
   text-transform: uppercase;
   letter-spacing: 1px;
   padding: 16px 50px;
+  font-size: 18px;
 }
 
 .logo-container {
@@ -101,6 +158,7 @@ input[type='submit'] {
 label {
   text-transform: uppercase;
   letter-spacing: 1px;
+  color: #c8362f;
 }
 
 .submit-container {
@@ -109,11 +167,6 @@ label {
 
 .intro-text {
   font-size: 24px;
-}
-
-h4 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
 }
 
 .body-text-container {
@@ -128,6 +181,10 @@ h4 {
 .body-text {
   font-size: 20px;
   line-height: 1.5;
+}
+
+.prize-image {
+  width: 100%;
 }
 
 @media (max-width: 709px) {
