--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-* {
+body {
   font-family: "Gotham Narrow A", "Gotham Narrow B", Helvetica, sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -6,207 +6,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-  color: #323232;
-  font-size: 16px;
-}
-
-h1{
-  font-size: 3.157em;
-}
-
-h2 {
-  font-size: 2.369em;
-}
-
-h3 {
-  font-size: 1.777em;
-}
-
-h4 {
-  font-size: 1.333em;
-}
-
-h5 {
-  font-size: 1em;
-}
-
-h6,
-small {
-  font-size: 0.75em;
-}
-
-section {
-  margin-top: 100px;
-}
-
-p {
-  font-weight: 400;
-  line-height: 1.5;
-}
-
-iframe {
-  max-width: 100%;
-}
-
-hr {
-  border-top: 10px solid #f2d667;
-}
-
-a {
-  color: #c8362f;
-}
-
-a:hover,
-a:focus {
-  color: #358873;
-}
-
-h1,h2,h3,h4,h5,h6 {
-  color: #358873;
-}
-
-h4 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
-.background {
-  position: fixed;
-  top: 0;
-  left: 0;
+.block {
+  border: 30px solid #000000;
   height: 100vh;
-  width: 100vw;
-  z-index: -1;
-  background-color: #76744e;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.contest-body {
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
-.contest-logo {
-  width: 130px;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.video-container {
-  text-align: center;
-}
-
-.photo-tile {
-  width: 400px;
-  display: inline-block;
-}
-
-.hidden {
-  display: none;
-}
-
-.page-title {
-  text-align: center;
-}
-
-.intro p {
-  font-weight: 700;
-}
-
-.logos {
-  background-color: #76744e;
   width: 100%;
-  padding-top: 50px;
+  box-sizing: border-box;
 }
-
-.logo {
-  text-align: center;
-  height: 130px;
-  margin-bottom: 20px;
-}
-
-.logo img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.photo-tiles {
-  margin-bottom: 100px;
-  overflow: hidden;
-}
-
-input[type='submit'] {
-  background-color: #c8362f;
-  color: #ffffff;
-  border: none;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  padding: 16px 50px;
-  font-size: 18px;
-}
-
-.logo-container {
-  padding-top: 50px;
-}
-
-.form-container {
-  padding-bottom: 50px;
-}
-
-label {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: #c8362f;
-}
-
-.submit-container {
-  text-align: center;
-}
-
-.intro-text {
-  font-size: 24px;
-}
-
-.body-text-container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 660px;
-  width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.body-text {
-  font-size: 20px;
-  line-height: 1.5;
-}
-
-.prize-image {
-  width: 100%;
-}
-
-@media (max-width: 709px) {
-  .body-text {
-    font-size: 19px;
-  }
-}
-
-@media (max-width: 669px) {
-    .body-text {
-      font-size: 18px;
-    }
-  }
-
-  @media (max-width: 629px) {
-    .body-text {
-      font-size: 17px;
-    }
-  }
-
-  @media (max-width: 599px) {
-    .body-text {
-      font-size: 16px;
-    }
-  }
