--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,11 +9,24 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1, h2, h3 {
+  text-transform: uppercase;
+  text-align: center;
+}
+
 h1 {
   font-size: 3.157rem;
-  text-align: center;
   margin-bottom: 40px;
-  text-transform: uppercase;
+
+}
+
+h2 {
+  font-size: 2.369em;
+}
+
+p {
+  line-height: 1.5;
+  font-size: 20px;
 }
 
 iframe {
@@ -39,19 +52,22 @@ iframe {
   min-height: 800px;
   position: relative;
   overflow: hidden;
+  background-image: url('http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/graphics/background-bars.png');
+  background-size: auto 750px;
+  box-sizing: border-box;
+  background-position: 50%;
+  border: 30px solid #f5f5f5;
 }
 
 .block__top {
   height: 94vh;
-  border: 30px solid #000000;
-  box-sizing: border-box;
   overflow: hidden;
   background-position: 50%;
 }
 
 .block__alt {
   border: none;
-  background: #000000;
+  background: #f5f5f5;
 }
 
 .block__center {
@@ -74,6 +90,14 @@ iframe {
   align-items: center;
   -ms-flex-pack: center;
   justify-content: center;
+}
+
+.block__center-content {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    max-width: 800px;
+    width: 80%;
 }
 
 .block__curtain {
@@ -174,4 +198,18 @@ iframe {
 .curtain__right {
   background-position: 0 0;
   right: -50%;
+}
+
+.contest-intro {
+  color: #ffffff;
+
+}
+
+.contest-intro span {
+  display: block;
+  text-transform: uppercase;
+  font-size: 1.333em;
+  line-height: 1.6;
+  font-weight: 700;
+  letter-spacing: 2px;
 }
