--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+button {
+  font-family: "Gotham Narrow A", "Gotham Narrow B", Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
 h1, h2, h3 {
   text-transform: uppercase;
   text-align: center;
@@ -31,6 +37,7 @@ p {
 
 iframe {
   width: 100%;
+  height: 36vw;
 }
 
 #page {
@@ -65,9 +72,13 @@ iframe {
   background-position: 50%;
 }
 
+.block__text,
+.block__alt {
+  background: #f5f5f5;
+}
+
 .block__alt {
   border: none;
-  background: #f5f5f5;
 }
 
 .block__center {
@@ -92,10 +103,21 @@ iframe {
   justify-content: center;
 }
 
+.block__prize-content {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1024px;
+  width: 90%;
+}
+
 .block__center-content {
+  text-align: center;
+}
+
+.block__center-content,
+.block__text-content {
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
     max-width: 800px;
     width: 80%;
 }
@@ -105,14 +127,21 @@ iframe {
   padding: 30px;
 }
 
+.block__text {
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+
+
 .enter-link {
+  color: #ffffff;
   text-align: center;
   width: 130px;
   height: 130px;
   text-decoration: none;
   font-weight: 700;
   text-transform: uppercase;
-  position: absolute;
+  position: fixed;
   top: 5px;
   left: 5px;
   padding: 10px;
@@ -192,24 +221,97 @@ iframe {
 
 .curtain__left {
   background-position: 100% 0;
-  left: -50%;
+  left: -48%;
 }
 
 .curtain__right {
   background-position: 0 0;
-  right: -50%;
+  right: -48%;
 }
 
-.contest-intro {
-  color: #ffffff;
-
-}
-
-.contest-intro span {
+.block__top span {
   display: block;
   text-transform: uppercase;
   font-size: 1.333em;
   line-height: 1.6;
   font-weight: 700;
   letter-spacing: 2px;
+}
+
+.entry-form {
+  background-color: #ffffff;
+  padding: 30px;
+}
+
+.entry-form small {
+  display: block;
+}
+
+.partners {
+  text-align: center;
+}
+
+.partner-logo {
+  width: 150px;
+  display: inline-block;
+  padding: 10px;
+  text-align: center;
+}
+
+.partner-logo img {
+  max-width: 100%;
+  max-height: 150px;
+}
+
+.prizes {
+  background-color: #ffffff;
+}
+
+.prizes a {
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.prize {
+  width: 200px;
+  display: inline-block;
+  opacity: 0.5;
+  text-align: center;
+}
+
+.prize-buttons {
+  text-align: center;
+  margin-top: 25px;
+}
+
+.prize-button {
+  background-color: yellow;
+  border: none;
+  padding: 15px;
+  margin: 10px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  font-size: 14px;
+}
+
+.prize.selected {
+  opacity: 1;
+}
+
+.prize span {
+  display: none;
+  text-align: center;
+}
+
+.prize.selected span {
+  display: block;
+}
+
+.prize img {
+  width: 100%;
+}
+
+.smoke {
+  opacity: 0;
+  background-color: rgba(255, 255, 255, 0.5);
 }
