--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,15 @@ iframe {
   height: 36vw;
 }
 
+a {
+  overflow: hidden;
+  color: #f96c35;
+}
+
+a:hover {
+  color: #c1542a;
+}
+
 #page {
   position: relative;
 }
@@ -60,8 +69,7 @@ iframe {
   min-height: 800px;
   position: relative;
   overflow: hidden;
-  background-image: url('http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/graphics/background-bars.png');
-  background-size: auto 750px;
+  background-image: url('http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/graphics/background-bars.jpg');
   box-sizing: border-box;
   background-position: 50%;
   border: 30px solid #f5f5f5;
@@ -71,6 +79,22 @@ iframe {
   height: 94vh;
   overflow: hidden;
   background-position: 50%;
+}
+
+header {
+  color: #ffffff;
+}
+
+header h1, header h2 {
+  margin: 0;
+}
+
+header h2 {
+  letter-spacing: 3px;
+}
+
+header p {
+  font-weight: 700;
 }
 
 .block__text,
@@ -109,6 +133,7 @@ iframe {
   margin-right: auto;
   max-width: 1024px;
   width: 90%;
+  text-align: center;
 }
 
 .block__center-content {
@@ -197,8 +222,7 @@ iframe {
   background-size: 100%;
   display: block;
   height: 400px;
-  margin: 30px auto 0;
-  max-width: 450px;
+  margin: 10px auto 30px
   min-width: 200px;
   width: 100%;
   position: relative;
@@ -236,7 +260,7 @@ iframe {
   font-size: 1.333em;
   line-height: 1.6;
   font-weight: 700;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .entry-form {
@@ -252,25 +276,40 @@ iframe {
   text-align: center;
 }
 
+.platinum .partner-logo {
+  width: 240px;
+  height: 150px;
+}
+
+.gold .partner-logo {
+  width: 100px;
+  height: 100px;
+}
+
 .partner-logo {
-  width: 150px;
   display: inline-block;
   padding: 10px;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .partner-logo img {
+  display: block;
+  margin: 0 auto;
   max-width: 100%;
-  max-height: 150px;
+  max-height: 100%;
 }
 
-.prizes {
+.prizes, .logos {
   background-color: #ffffff;
 }
 
 .prizes a {
+  height: 100%;
+  width: 100%;
   text-decoration: none;
   font-size: 14px;
+  display: block;
 }
 
 .prize {
@@ -291,7 +330,7 @@ iframe {
 }
 
 button, input[type="submit"] {
-  background-color: yellow;
+  background-color: #77d3ff;
   border: none;
   padding: 15px;
   margin-top: 10px;
@@ -300,11 +339,22 @@ button, input[type="submit"] {
   letter-spacing: 0.5px;
   font-size: 14px;
   font-weight: 700;
-  color: #323232;
+  color: #ffffff;
+}
+
+input[type="submit"] {
+  height: 52px;
+  font-size: 20px;
+  letter-spacing: 1px;
 }
 
 button:hover,button:active, input[type="submit"]:hover {
-  background-color: #b1b184;
+  background-color: #a4dfff;
+}
+
+.prize-button.active,
+.prize-button-all.active {
+  background-color: #a4dfff;
 }
 
 .prize.selected {
@@ -351,4 +401,13 @@ label {
 .entry-form {
   width: 100%;
   max-width: 420px;
+}
+
+.slogan {
+  text-align: center;
+  font-weight: 700;
+}
+
+.weeks-desc {
+  margin-top: 30px;
 }
