--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,21 +90,16 @@ hr {
 
 .block {
   width: 100%;
-  height: 60vh;
-  min-height: 800px;
   position: relative;
   overflow: hidden;
-  background-color: #fe7d3a;
+  background-color: #77d3ff;
   box-sizing: border-box;
   border: 30px solid #fffdd4;
 }
 
 .block__top {
-  height: 100vw;
-  max-height: 1054px;
-  min-height: 640px;
+  height: 1000px;
   overflow: hidden;
-  background-position: 50%;
 }
 
 header {
@@ -125,7 +120,7 @@ header h1, header h2 {
   background-size: contain;
   display: block;
   height: 20vw;
-  max-height: 400px;
+  max-height: 220px;
   margin: 10px auto 30px;
   min-width: 200px;
   width: 100%;
@@ -134,10 +129,6 @@ header h1, header h2 {
 
 header h2 {
   letter-spacing: 3px;
-}
-
-header p {
-  font-weight: 700;
 }
 
 .block__text,
@@ -159,20 +150,46 @@ header p {
   justify-content: center;
 }
 
-.block__content {
-  -ms-flex-direction: column;
-  flex-direction: column;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+.mountain-background {
+  background-image: url(http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/graphics/pattern.png);
+  background-size: contain;
+  background-repeat: repeat-x;
 }
 
-.hero-copy {
-  color: #505050;
+.stars {
+  background-image: url(http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/graphics/stars.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 330px;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.mountain {
+  background-image: url(http://assets.ibex.com.s3.amazonaws.com/images/ultimatecampout/graphics/mountains.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 350px;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.contest-intro {
+  background-color: #fe7d3a;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top: 679px;
+  bottom: 0;
+}
+
+.block__content {
+  height: 100%;
+  width: 100%;
 }
 
 .block__full-content {
@@ -184,8 +201,8 @@ header p {
 }
 
 .block__center-content {
-  position: relative;
   text-align: center;
+  padding-top: 180px;
 }
 
 .block__center-content,
@@ -202,8 +219,7 @@ header p {
 }
 
 .block__text {
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding-bottom: 30px;
 }
 
 
@@ -303,6 +319,13 @@ header p {
   width: 100%;
 }
 
+.hero-copy {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  width: 80%;
+}
+
 .contest-details {
   position: absolute;
   top: 20px;
@@ -354,6 +377,10 @@ header p {
 .entry-form {
   background-color: #ffffff;
   padding: 30px;
+  margin-top: 30px;
+  margin-bottom: 180px;
+  width: 100%;
+  max-width: 420px;
 }
 
 .entry-form small {
@@ -502,11 +529,6 @@ label {
   letter-spacing: 0.5px;
 }
 
-.entry-form {
-  width: 100%;
-  max-width: 420px;
-}
-
 .slogan {
   text-align: center;
   font-weight: 700;
@@ -603,13 +625,17 @@ label {
     width: 90%;
   }
 
+  .headline-wrapper h2 {
+    font-size: 1.777em;
+  }
+
   header h2 {
     font-size: 20px;
     letter-spacing: 1.5px;
   }
 
   .block__top {
-    min-height: 780px;
+    height: 760px;
   }
 
   .block__top span {
@@ -627,7 +653,6 @@ label {
 
   .block__curtain {
     width: 100%;
-    padding: 0;
   }
 
   .curtain {
@@ -635,7 +660,7 @@ label {
   }
 
   .prize {
-    width: 49%;
+    width: 43%;
   }
 
   .video-modal__inner {
@@ -652,5 +677,28 @@ label {
 
   .hero-midground {
     top: 360px;
+  }
+
+  .mountain {
+    width: 350px;
+    height: 170px;
+  }
+
+  .contest-intro {
+    top: 500px;
+  }
+}
+
+@media only screen and (max-width : 600px) {
+  .prize:nth-child(1) {
+    display: block;
+  }
+
+  .prize-sticker {
+    top: 96px;
+  }
+
+  .entry-form {
+    margin: 0;
   }
 }
