Adds tent and final touches

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ body {
   font-weight: 400;
   background-repeat: repeat-x;
   margin: 0;
-  color: #323232;
+  color: #676767;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -98,7 +98,7 @@ hr {
 }
 
 .block__top {
-  height: 1000px;
+  height: 1140px;
   overflow: hidden;
 }
 
@@ -317,6 +317,11 @@ header h2 {
 .hero-header {
   top: 180px;
   width: 100%;
+}
+
+.tent-graphic {
+  width: 180px;
+  padding-top: 20px;
 }
 
 .hero-copy {
@@ -635,7 +640,7 @@ label {
   }
 
   .block__top {
-    height: 760px;
+    height: 860px;
   }
 
   .block__top span {
@@ -690,6 +695,10 @@ label {
 }
 
 @media only screen and (max-width : 600px) {
+  .block__top {
+    height: 910px;
+  }
+
   .prize:nth-child(1) {
     display: block;
   }
