--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.shooting-star {
+  position: absolute;
+  border-radius: 50%;
+  background-color: #fffdd4;
+  z-index: 1000;
+  visibility: hidden;
+  width: 10px;
+  height: 10px;
+}
+
 button,
 input {
   font-family: "Gotham Narrow A", "Gotham Narrow B", Helvetica, sans-serif;
@@ -376,11 +386,9 @@ header h2 {
 
 .block__top span {
   display: block;
-  text-transform: uppercase;
   font-size: 1.333em;
   line-height: 1.6;
   font-weight: 700;
-  letter-spacing: 1px;
 }
 
 .entry-form {
@@ -635,6 +643,10 @@ label {
   font-weight: 700;
   padding-bottom: 20px;
   color: #fe7d3a;
+}
+
+.prize-won {
+  background-color: #fe7d3a;
 }
 
 @media only screen and (max-width : 768px) {
